chore: configure go-specific pre-commit hooks

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,3 +13,8 @@ repos:
     hooks:
     -   id: cfn-python-lint
         files: infrastructure/cloudformation/.*\.(json|yml|yaml)$
+
+-   repo: https://github.com/tekwizely/pre-commit-golang
+    rev: master
+    hooks:
+    -   id: golangci-lint
