add automation for verify service

--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
     paths:
+      - 'pkg/service/**'
       - 'pkg/messages/register/**'
       - 'internal/handler/issue.go'
       - 'cmd/issue/main.go'
