--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -1,4 +1,4 @@
-name: Register service
+name: Verify service
 
 on:
   push:
@@ -6,12 +6,9 @@ on:
       - main
     paths:
       - 'pkg/service/**'
-      - 'pkg/email/**'
-      - 'pkg/response/**'
-      - 'pkg/messages/register/**'
       - 'pkg/messages/issue/**'
-      - 'internal/handler/register.go'
-      - 'cmd/register/main.go'
+      - 'internal/handler/verify.go'
+      - 'cmd/verify/main.go'
 
 jobs:
   build:
@@ -27,12 +24,12 @@ jobs:
       - name: Show Go version
         run: go version
       - name: Build artifacts
-        run: ./scripts/build.sh -s register
+        run: ./scripts/build.sh -s verify
       - name: Upload artifact
         uses: actions/upload-artifact@master
         with:
-          name: register
-          path: ./bin/register/main
+          name: verify
+          path: ./bin/verify/main
 
   upload:
     name: Upload
@@ -48,12 +45,12 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@master
         with:
-          name: register
-          path: ./bin/register/
+          name: verify
+          path: ./bin/verify/
       - name: Show AWS CLI version
         run: aws --version
       - name: Upload artifacts to s3
-        run: ./scripts/upload.sh -s register
+        run: ./scripts/upload.sh -s verify
 
   promote:
     name: Promote
@@ -69,4 +66,4 @@ jobs:
       - name: Show AWS CLI version
         run: aws --version
       - name: Promote new version
-        run: ./scripts/promote.sh -s register
+        run: ./scripts/promote.sh -s verify
